--- a/server/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -103,6 +103,7 @@ Display_StrengthMeter=Salasanan vahvuus
 Display_UpdateProfile=P\u00e4ivit\u00e4 seuraavia tietoja:
 Display_UserEventHistory=T\u00e4ll\u00e4 sivulla n\u00e4et salasanaasi liittyv\u00e4t tapahtumat, jotka on tehty t\u00e4m\u00e4n liittym\u00e4n kautta. Kaikki ajat ovat %1% aikavy\u00f6hykkeen aikoja.
 Display_LogoutPublic=Istuntosi on vanhentunut toimettomuuden vuoksi.
+Display_TokenResend=Turvakoodi pit\u00e4isi saapua melkein heti. Jos olet odottanut jonkin aikaa ja et ole viel\u00e4 saanut koodia, voit l\u00e4hett\u00e4\u00e4 uuden koodin napsauttamalla l\u00e4het\u00e4 uusi koodi painiketta.
 Field_Code=Koodi
 Field_Confirm_Prefix=Vahvista
 Field_ConfirmPassword=Vahvista uusi salasana
